syntax = "proto3";
package chain4energy.c4echain.cfetokenization;

option go_package = "github.com/chain4energy/c4e-chain/x/cfetokenization/types";

message UserCertificates {
  string owner = 1;
  Certificate certificates = 2;
}

message Certificate {
  uint64 id = 1;
  uint64 certyficate_type_id = 2;
  uint64 power = 3;
  string device_address = 4;
  repeated string allowed_authorities = 5;
  string authority = 6;
  CertificateStatus certificate_status = 7;
}

enum CertificateStatus {
  UNKNOWN_CERTIFICATE_STATUS = 0;
  VALID = 1;
  INVALID = 2;
  BURNED = 3;
}